feat: Add Makefile for project automation and improve development workflow
- Introduced a Makefile to streamline installation, testing, building, and publishing processes.
- Added commands for checking code quality, running tests, and managing documentation.
- Updated README.md with new badges for release, build status, and code coverage.
- Created a codecov.yaml configuration file to set coverage thresholds.
- Removed old Sphinx documentation files and replaced them with MkDocs configuration.
- Added mkdocs.yml for documentation management with Material theme.
- Updated pyproject.toml to use Hatch for building and managing dependencies.
- Removed setup.py in favor of a more modern configuration with Hatch.
- Enhanced tox.ini for better environment management and integration testing.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,29 +6,15 @@ on:
     types: [published]
 
 jobs:
-  deploy:
+  deploy-docs:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 20
     steps:
-    - uses: actions/checkout@v4
-    - name: Install uv
-      uses: astral-sh/setup-uv@v6
-      with:
-        enable-cache: true
-    - name: "Set up Python"
-      uses: actions/setup-python@v5
-      with:
-          python-version-file: "pyproject.toml"
-    - name: Install dependencies
-      run: |
-        uv sync --all-extras --dev
-        uv pip install -r docs/requirements.txt
-    - name: Create docs
-      run: |
-        uv run python -m sphinx -b html docs/ docs/_build/html
-        cp docs/_config.yml docs/_build/html/_config.yml
-    - name: Deploy Docs 🚀
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        branch: gh-pages # The branch the action should deploy to.
-        folder: docs/_build/html # The folder the action should deploy.
+      - name: Check out
+        uses: actions/checkout@v4
+
+      - name: Set up the environment
+        uses: ./.github/actions/setup-python-env
+
+      - name: Deploy documentation
+        run: uv run mkdocs gh-deploy --force
