--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,20 +11,13 @@ jobs:
     timeout-minutes: 20
     steps:
     - uses: actions/checkout@v4
-    - name: Install uv
-      uses: astral-sh/setup-uv@v6
-      with:
-        enable-cache: true
-    - name: "Set up Python"
-      uses: actions/setup-python@v5
-      with:
-          python-version-file: "pyproject.toml"
-    - name: Install dependencies
-      run: |
-        uv sync --all-extras --dev
+
+    - name: Set up the environment
+      uses: ./.github/actions/setup-python-env
+
     - name: Build and publish
       run: |
-        uv run python setup.py bdist_wheel
+        uv build
     - name: Publish distribution 📦 to PyPI
       if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@release/v1
