--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - main
 
 jobs:
   build:
@@ -17,17 +18,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Install uv
-      uses: astral-sh/setup-uv@v6
-      with:
-        enable-cache: true
-    - name: "Set up Python"
-      uses: actions/setup-python@v5
-      with:
-          python-version-file: "pyproject.toml"
-    - name: Install dependencies
-      run: |
-        uv sync --all-extras --dev
+
+    - name: Set up the environment
+      uses: ./.github/actions/setup-python-env
+
     - name: Test with tox
       run: |
         uv run tox
