--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,7 +104,7 @@ show_error_codes = true
 
 [tool.pytest.ini_options]
 addopts = """
---cov pyomop --cov-report term-missing
+--cov src.pyomop --cov-report term-missing
 --verbose
 """
 norecursedirs = ["dist", "build", ".tox"]
