fix: update tox commands to sync all extras for improved environment setup

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ description = invoke pytest to run automated tests
 passenv = PYTHON_VERSION
 allowlist_externals = uv
 commands =
-    uv sync --python {envpython}
+    uv sync --all-extras --python {envpython}
     uv run python -m pytest --doctest-modules src/pyomop tests --cov --cov-config=pyproject.toml --cov-report=xml
 
 
