--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -41,4 +41,4 @@ jobs:
         uses: ./.github/actions/setup-python-env
 
       - name: Check if documentation can be built
-        run: uv run mkdocs build -s
+        run: uv run mkdocs build
