fix: update uv sync command to include all extras and refine pytest command in tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ passenv = PYTHON_VERSION
 allowlist_externals = uv
 commands =
     uv sync --all-extras --python {envpython}
-    uv run python -m pytest --doctest-modules src/pyomop tests --cov --cov-config=pyproject.toml --cov-report=xml
+    uv run python -m pytest src/pyomop tests --cov --cov-config=pyproject.toml --cov-report=xml
 
 
 [testenv:{clean,build}]
