Feature/fhir to omop 2 (#228)
* Refactor code structure for improved readability and maintainability

* fix: update CdmEngineFactory initialization and improve pyproject.toml formatting

* Refactor code structure for improved readability and maintainability

* feat: add filters for person table in mapping example

* feat: add year_of_birth column to person table in mapping example

* feat: implement fix_person_id function to normalize person_id foreign keys across tables

* feat: add backfill functionality for person birth fields in loader

* feat: implement vocabulary_lookup function to populate concept_id columns from vocabulary table

* feat: update PostgreSQL connection to use asyncpg driver and remove search path options

* feat: add asyncpg dependency for PostgreSQL async support

* feat: trim string values to 50 characters before insert in _convert_value method

* feat: convert create_vocab method to async and update write_vocab calls

* feat: configure CdmEngineFactory with PostgreSQL connection details and add load_vocab script

* feat: comment out PostgreSQL connection details in load_csv_mapping and load_vocab scripts

* Refactor code structure for improved readability and maintainability

* feat: update concept mappings in loader and mapping example

* feat: transform raw values from database query for improved data handling

* feat: streamline row processing and update logic in CdmCsvLoader

* fix: correct variable assignment for source in row processing

* Implement code changes to enhance functionality and improve performance

* loader update

* fix: update connection type in CdmCsvLoader to AsyncConnection for async compatibility

* feat: add default mapping file for CdmCsvLoader and update load method to handle optional mapping path

* fix: uncomment mapping_path in loader.load to enable mapping file usage

* feat: add comprehensive tests for CdmCsvLoader functionality and data integrity

* feat: Add Makefile for project automation and improve devel

--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,19 @@
 # Tox configuration file
-# Read more under https://tox.readthedocs.org/
+# Read more under https://tox.readthedocs.io/
 # THIS SCRIPT IS SUPPOSED TO BE AN EXAMPLE. MODIFY IT ACCORDING TO YOUR NEEDS!
 
 [tox]
 minversion = 3.15
-envlist = default, clean, build, docs, doctests
-
+envlist = default, clean, build, docs, doctests, integration
+skipsdist = true
 
 [testenv]
 description = invoke pytest to run automated tests
-isolated_build = True
-setenv =
-    TOXINIDIR = {toxinidir}
-passenv =
-    HOME
-extras =
-    testing, llm
+passenv = PYTHON_VERSION
+allowlist_externals = uv
 commands =
-    pytest {posargs}
+    uv sync --all-extras --python {envpython}
+    uv run python -m pytest tests --cov --cov-config=pyproject.toml --cov-report=xml
 
 
 [testenv:{clean,build}]
@@ -27,26 +23,20 @@ description =
     https://github.com/pypa/pep517/issues/91
     https://github.com/pypa/build
 # NOTE: build is still experimental, please refer to the links for updates/issues
-skip_install = True
-changedir = {toxinidir}
-commands =
-    clean: python -c 'from shutil import rmtree; rmtree("build", True); rmtree("dist", True)'
-    build: python setup.py sdist
+passenv = PYTHON_VERSION
+allowlist_externals = uv
 # By default `build` produces wheels, you can also explicitly use the flags `--sdist` and `--wheel`
-
+commands =
+    uv sync --python {envpython}
+    uv build
 
 [testenv:{docs,doctests}]
 description = invoke sphinx-build to build the docs/run doctests
-setenv =
-    DOCSDIR = {toxinidir}/docs
-    BUILDDIR = {toxinidir}/docs/_build
-    docs: BUILD = html
-    doctests: BUILD = doctest
-deps =
-    -r {toxinidir}/docs/requirements.txt
-    # ^  requirements.txt shared with Read The Docs
+passenv = PYTHON_VERSION
+allowlist_externals = uv
 commands =
-    sphinx-build -b {env:BUILD} -d "{env:BUILDDIR}/doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" {posargs}
+    uv sync --python {envpython}
+    uv run mkdocs build
 
 
 [testenv:publish]
@@ -54,18 +44,18 @@ description =
     Publish the package you have been developing to a package index server.
     By default, it uses testpypi. If you really want to publish your package
     to be publicly accessible in PyPI, use the `-- --repository pypi` option.
-skip_install = True
-changedir = {toxinidir}
-passenv =
-    TWINE_USERNAME
-    TWINE_PASSWORD
-    TWINE_REPOSITORY
-deps = twine
+passenv = PYTHON_VERSION
+allowlist_externals = uv
 commands =
-    python -m twine check dist/*
-    python -m twine upload {posargs:--repository testpypi} dist/*
+    uv sync --python {envpython}
+    uv publish --index testpypi
+
 
 [testenv:integration]
 setenv = TOXINIDIR = {toxinidir}
+passenv = PYTHON_VERSION
+allowlist_externals = uv
+package = uv-editable
 commands =
-    python t_install.py
+    uv sync --python {envpython}
+    uv run python t_install.py
