--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,9 @@ tags
 # Unittest and coverage
 htmlcov/*
 .coverage
+.coverage.*
 .tox
-junit.xml
+junit*.xml
 coverage.xml
 .pytest_cache/
 
@@ -45,6 +46,7 @@ docs/_rst/*
 docs/_build/*
 cover/*
 MANIFEST
+site/*
 
 # Per-project virtualenvs
 .venv*/
