--- a/src/pyomop/mapping.default.json
+++ b/src/pyomop/mapping.default.json
@@ -342,5 +342,9 @@
                 }
             ]
         }
+    ],
+    "force_text_fields": [
+        "production_id",
+        "drug_source_value"
     ]
 }
