Add Codecov upload step to pytest workflow

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,8 +29,12 @@ jobs:
       uses: ./.github/actions/setup-python-env
 
     - name: Run tests
-      run: uv run python -m pytest tests --cov --cov-config=pyproject.toml --cov-report=xml
+      run: uv run python -m pytest tests --cov --cov-branch --cov-config=pyproject.toml --cov-report=xml
 
+    - name: Upload results to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
   check-docs:
     runs-on: ubuntu-latest
     steps:
