Update upgrade.yml to include reviewers

--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -23,5 +23,5 @@ jobs:
         delete-branch: true
         labels: |
             automated pr
-        body-path: result
-        draft: true
+        reviewers: |
+            dermatologist
