--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -35,14 +35,14 @@ jobs:
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-  check-docs:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out
-        uses: actions/checkout@v5
+  # check-docs:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out
+  #       uses: actions/checkout@v5
 
-      - name: Set up the environment
-        uses: ./.github/actions/setup-python-env
+  #     - name: Set up the environment
+  #       uses: ./.github/actions/setup-python-env
 
-      - name: Check if documentation can be built
-        run: uv run mkdocs build
+  #     - name: Check if documentation can be built
+  #       run: uv run mkdocs build
