Add nest_asyncio to dependencies for improved async handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "pandas",
     "aiosqlite",
     "asyncpg",
+    "nest_asyncio",
     "requests",
     "greenlet",
     "fhiry>=5.1.1",
