Refactor code structure for improved readability and maintainability

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "requests",
     "greenlet",
     "fhiry>=5.1.1",
-    "mcp"
+    "mcp",
 ]
 
 
@@ -69,13 +69,7 @@ explicit = true
 fallback-version = "0.1.0"
 
 [tool.uv.build-backend]
-source-exclude = [
-  "tests/*",
-  "examples/*",
-  "docs/*",
-  "notes/*",
-  "notebooks/*"
-]
+source-exclude = ["tests/*", "examples/*", "docs/*", "notes/*", "notebooks/*"]
 
 [project.scripts]
 pyomop = "pyomop.main:main_routine"
@@ -83,11 +77,10 @@ pyomop-mcp-server = "pyomop.mcp.server:main_cli"
 
 [project.optional-dependencies]
 llm = [
-    "llama-index",
-    "llama-index-experimental",
-    "llama-index-embeddings-huggingface",
-    "overrides",
-    "llama-index-llms-google-genai",
+    "langchain>=1.0",
+    "langchain-community",
+    "langchain-core",
+    "langchain-huggingface",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -137,7 +130,8 @@ select = [
     # mccabe
     "C90",
     # pycodestyle
-    "E", "W",
+    "E",
+    "W",
     # pyflakes
     "F",
     # pygrep-hooks
@@ -168,4 +162,3 @@ skip_empty = true
 [tool.coverage.run]
 branch = true
 source = ["src"]
-
