Refactor LLM initialization to use OpenAI model; update dependencies and improve dynamic prompt documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ llm = [
     "langchain-core",
     "langchain-huggingface",
     "langchain_google_genai",
+    "langchain-openai",
     "dhti-elixir-base",
 ]
 
